--- a/task-3.html
+++ b/task-3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <script src="./js/task-3.js" defer></script>
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
